--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.0.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.5",
     "next": "14.0.3",
     "punycode": "^2.3.1",
     "react": "^18",
